fixed the charge process and added stripe api test key

--- a/app/assets/javascripts/jquery.raty.js.erb
+++ b/app/assets/javascripts/jquery.raty.js.erb
@@ -722,10 +722,10 @@
 
   $.fn.raty.defaults = {
     cancel       : false,
-    cancelClass  : 'image-url("raty-cancel.png")',
+    cancelClass  : '<%= asset_path("raty-cancel.png") %>',
     cancelHint   : 'Cancel this rating!',
-    cancelOff    : 'image-url("cancel-off.png")',
-    cancelOn     : 'image-url("cancel-on.png")',
+    cancelOff    : '<%= asset_path("cancel-off.png") %>',
+    cancelOn     : '<%= asset_path("cancel-on.png") %>',
     cancelPlace  : 'left',
     click        : undefined,
     half         : false,
@@ -745,9 +745,9 @@
     scoreName    : 'score',
     single       : false,
     space        : true,
-    starHalf     : 'image-url("star-half.png")',
-    starOff      : 'image-url("star-off.png")',
-    starOn       : 'image-url("star-on.png")',
+    starHalf     : '<%= asset_path("star-half.png") %>',
+    starOff      : '<%= asset_path("star-off.png") %>',
+    starOn       : '<%= asset_path("star-on.png") %>',
     starType     : 'img',
     target       : undefined,
     targetFormat : '{score}',
