--- a/app/assets/javascripts/reviews.js.erb
+++ b/app/assets/javascripts/reviews.js.erb
@@ -2,7 +2,7 @@ $(document).ready(function() {
 
   // $('.stars').each(function({
   //   raty({
-  //     path: '/assets',
+  //     path: '',
   //     readOnly: true,
   //     score: $( this ).attr( 'data-score' )
   //   });
