--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -65,7 +65,7 @@
 
 <script>
   $("#average_rating").raty({
-    path: '/assets',
+    path: '',
     readOnly: true,
     score: <%= @service.average_rating.to_i %>
   });
