--- a/app/views/reviews/_list.html.erb
+++ b/app/views/reviews/_list.html.erb
@@ -30,7 +30,7 @@
 
     <script>
       $('#stars_<%= r.id %>').raty({
-        path: '/assets',
+        path: '',
         readOnly: true,
         score: <%= r.star.to_i %>
       });
